# SIGameMultiplayer

./: .gitignore  AnswerValidationDialog.ui  CMakeLists.txt  GameLogic.cpp  GameLogic.h  LobbyWindow.cpp  LobbyWindow.h  LobbyWindow.ui  MultiplayerWindow.ui  Player.cpp  QuestionDialog.ui  QuestionPackage.cpp  README.md  answervalidationdialog.cpp  answervalidationdialog.h  connectionWidget.cpp  connectionWidget.h  gameClient.cpp  gameClient.h  gameServer.cpp  gameServer.h  gameUI.cpp  gameUI.h  gameeditorwindow.cpp  gameeditorwindow.h  gameeditorwindow.ui  gameeditorwindow.ui.autosave  main.cpp  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  multiplayerwindow.cpp  multiplayerwindow.h  playerSetup.cpp  playerSetup.h  question.json  questiondialog.cpp  questiondialog.h  res.qrc
